<resources>
    <string name="app_name">垃圾分类手册</string>

    <string name="search">搜\t\t索</string>
    <string name="search_keywords_hint">检索关键词</string>


    <!-- descriptions for rubbish_wet -->
    <string name="rubbish_wet_name">湿垃圾</string>
    <string name="rubbish_wet_descriptions">日常生活垃圾产生的容易腐烂的生物质废弃物</string>
    <string name="rubbish_wet_contains_title">湿垃圾主要包括</string>
    <string name="rubbish_wet_contains_content">剩菜剩饭、瓜皮果核、花卉绿植、过期食品等</string>
    <string name="rubbish_wet_categorize_title">湿垃圾投放要求</string>
    <string name="rubbish_wet_categorize_content">纯流质的食物垃圾，如牛奶等，应直接倒进下水口\n有包装物的湿垃圾应将包装物去除后分类投放，包装物请投放到对应的可回收物或干垃圾容器
    </string>


    <string name="rubbish_dry_name">干垃圾</string>
    <string name="rubbish_dry_descriptions">除有害垃圾、可回收物、 湿垃圾以外的其他生活废弃物</string>
    <string name="rubbish_dry_contains_title">干垃圾主要包括</string>
    <string name="rubbish_dry_contains_content">餐盒、餐巾纸、湿纸巾、卫生间用纸、塑料袋、 食品包装袋、污染严重的纸、烟蒂、纸尿裤、 一次性杯子、大骨头、贝壳、花盆、陶瓷等</string>
    <string name="rubbish_dry_categorize_title">干垃圾投放要求</string>
    <string name="rubbish_dry_categorize_content">尽量沥干水分\n难以辨识类别的生活垃圾投入干垃圾容器内</string>

    <string name="rubbish_harm_name">有害垃圾</string>
    <string name="rubbish_harm_descriptions">对人体健康或者自然环境造成直接或潜在危害的废弃物</string>
    <string name="rubbish_harm_contains_title">有害垃圾主要包括</string>
    <string name="rubbish_harm_contains_content">废电池、油漆桶、荧光灯管、废药品及其包装物等</string>
    <string name="rubbish_harm_categorize_title">有害垃圾投放要求</string>
    <string name="rubbish_harm_categorize_content">投放时请注意轻放\n易破损的请连带包装或包裹后轻放\n如易挥发，请密封后投放</string>

    <string name="rubbish_recycle_name">可回收物</string>
    <string name="rubbish_recycle_descriptions">适宜回收利用和资源化利 用的，如：玻、金、塑、 纸、衣</string>
    <string name="rubbish_recycle_contains_title">可回收物主要包括</string>
    <string name="rubbish_recycle_contains_content">酱油瓶、玻璃杯、平板玻璃、易拉罐、饮料瓶、 洗发水瓶、塑料玩具、书本、报纸、广告单、 纸板箱、衣服、床上用品等</string>
    <string name="rubbish_recycle_categorize_title">可回收物投放要求</string>
    <string name="rubbish_recycle_categorize_content">轻投轻放\n清洁干燥，避免污染\n废纸尽量平整\n立体包装物请清空内容物，清洁后压扁投放\n有尖锐边角的，应包裹后投放
    </string>

    <string name="rubbish_unknown_name">未知</string>


    <!-- sth about the http requests -->
    <string name="network_error">请检查网络，稍后再试!</string>
    <string name="i_know">知道了</string>
    <string name="querying_loading">正在查询...</string>
    <string name="loading">正在加载...</string>


    <string name="back">返\t\t回</string>
    <string name="cancel">取\t\t消</string>
    <string name="share_to_friends">告诉朋友</string>

    <string name="goods_recommends">垃圾桶领券内部价</string>
    <string name="goods_recommends_bins">高性价比垃圾桶</string>

    <string name="not_found">抱歉哦，未找到该垃圾类型</string>

    <string name="practice">练习一下</string>
    <string name="demo_description">想让上海的生活环境更好，垃圾自然是需要严格进行管理的。而今年开始，上海将会更加干净！</string>
    <string name="demo_description_1">&lt;&lt;上海市生活垃圾管理条例&gt;&gt; \n将于2019年7月1日正式实施！</string>
    <string name="demo_description_2">个人混合投放垃圾，今后最高可罚200元，\n单位混装混运，最高可罚5万元！</string>
    <string name="demo_description_3">餐饮外卖不能主动提供一次性餐具，大家快一起来学习垃圾分类知识，避免不小心被罚款哦~</string>

    <string name="app_title">垃圾分类手册</string>
    <string name="app_description">垃圾分类，从我做起，让城市更美好！</string>

    <string name="learn_rubbish_name">待分类垃圾</string>

    <string name="rubbish_copyright">数据来源@上海公共信息发布平台2019</string>
</resources>
