<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".HomeActivity">


    <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/shape_result_circle_border_large_raduis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


        <TextView
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/demo_description"/>

        <TextView
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/demo_description_1"/>


        <TextView
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/demo_description_2"/>

        <TextView
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/demo_description_3"/>

    </LinearLayout>

    <!-- back to home and share the screen cap -->
    <LinearLayout
            android:id="@+id/linear_buttons_back_share"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <Button
            android:id="@+id/btn_practice"
            android:layout_width="wrap_content" android:layout_height="44dp"
            android:text="@string/practice"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:background="@drawable/selector_button_with_raduis"/>


    </LinearLayout>


</LinearLayout>