<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="1440px"
        android:layout_height="3000px"
        android:orientation="vertical"
        android:background="@color/white"
        tools:context=".HomeActivity">

    <ScrollView
            android:id="@+id/scrollview_full"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="40dp">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <ImageView
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="340dp"
                android:layout_height="80dp"
                android:src="@drawable/title_logo_bar"/>


            <LinearLayout
                    android:focusable="false"
                    android:focusableInTouchMode="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <EditText
                        android:layout_weight="5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:lines="1"
                        android:id="@+id/editText_keywords_share"
                        android:hint="@string/search_keywords_hint"
                        android:background="@drawable/shape_edittext_circle_border"/>

                <Button
                        android:layout_gravity="center_vertical"
                        style="@style/dialog_blue_button"
                        android:id="@+id/btn_search"
                        android:textSize="18dp"
                        android:layout_width="0dp"
                        android:text="@string/search"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="2"
                        android:layout_height="40dp"/>

            </LinearLayout>


            <LinearLayout
                    android:visibility="gone"
                    android:id="@+id/category_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <LinearLayout
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:orientation="horizontal">
                    <ImageView
                            android:id="@+id/category_of_recycle"
                            android:layout_margin="10dp"
                            android:src="@drawable/icon_recycle"
                            android:layout_width="0dp" android:layout_height="100dp"
                            android:layout_weight="1"/>

                    <ImageView
                            android:layout_margin="10dp"
                            android:id="@+id/category_of_wet"
                            android:src="@drawable/icon_wet"
                            android:layout_width="0dp" android:layout_height="100dp"
                            android:layout_weight="1"/>

                    <ImageView
                            android:layout_margin="10dp"
                            android:id="@+id/category_of_dry"
                            android:src="@drawable/icon_dry"
                            android:layout_width="0dp" android:layout_height="100dp"
                            android:layout_weight="1"/>

                    <ImageView
                            android:layout_margin="10dp"
                            android:id="@+id/category_of_harm"
                            android:src="@drawable/icon_harm"
                            android:layout_width="0dp" android:layout_height="100dp"
                            android:layout_weight="1"/>
                </LinearLayout>

            </LinearLayout>

            <!-- the result -->
            <include
                    android:id="@+id/result_part"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    layout="@layout/result_share"/>


            <!-- the app icon and names -->
            <RelativeLayout
                    android:layout_marginTop="160px"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
            <ImageView
                    android:id="@+id/imageview_icon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/icon_recycle"/>
                <TextView
                        android:layout_marginStart="60dp"
                        android:layout_marginLeft="60dp"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_title"/>

                <TextView
                        android:layout_marginTop="30dp"
                        android:layout_marginStart="60dp"
                        android:layout_marginLeft="60dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_description"/>

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
    <TextView
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rubbish_copyright"
            android:layout_gravity="center|bottom"/>
</FrameLayout>