<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        tools:context=".HomeActivity">

    <ScrollView
            android:id="@+id/scrollview_full"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="40dp">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <ImageView
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="340dp"
                    android:layout_height="80dp"
                    android:src="@drawable/title_logo_bar"/>


            <LinearLayout
                    android:focusable="false"
                    android:focusableInTouchMode="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <EditText
                        android:layout_weight="3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:lines="1"
                        android:id="@+id/editText_keywords"
                        android:hint="@string/search_keywords_hint"
                        android:background="@drawable/shape_edittext_circle_border"/>

                <Button
                        android:id="@+id/btn_search"
                        android:textSize="18dp"
                        android:layout_width="0dp"
                        android:text="@string/search"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"/>

            </LinearLayout>


            <LinearLayout
                    android:id="@+id/category_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <ImageView
                        android:id="@+id/category_of_recycle"
                        android:layout_margin="10dp"
                        android:src="@drawable/icon_recycle"
                        android:layout_width="0dp" android:layout_height="wrap_content"
                        android:layout_weight="1"/>

                <ImageView
                        android:layout_margin="10dp"
                        android:id="@+id/category_of_wet"
                        android:src="@drawable/icon_wet"
                        android:layout_width="0dp" android:layout_height="wrap_content"
                        android:layout_weight="1"/>

                <ImageView
                        android:layout_margin="10dp"
                        android:id="@+id/category_of_dry"
                        android:src="@drawable/icon_dry"
                        android:layout_width="0dp" android:layout_height="wrap_content"
                        android:layout_weight="1"/>

                <ImageView
                        android:layout_margin="10dp"
                        android:id="@+id/category_of_harm"
                        android:src="@drawable/icon_harm"
                        android:layout_width="0dp" android:layout_height="wrap_content"
                        android:layout_weight="1"/>

            </LinearLayout>

            <!-- the result -->
            <include android:id="@+id/result_part"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
                     layout="@layout/result_piece"/>


        </LinearLayout>
    </ScrollView>
    <TextView
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rubbish_copyright"
            android:layout_gravity="center|bottom"/>
</FrameLayout>